--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "slick-carousel": "^1.8.1",
     "vue": "^2.1.10",
     "web3": "^1.0.0-beta.36",
-    "webpack-obfuscator": "^0.18.0"
+    "webpack-obfuscator": "^0.18.0",
+    "ethereumjs-tx": "^1.3.7"
   },
   "dependencies": {
     "uglify-es": "github:mishoo/UglifyJS2#harmony"
