--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
-        "mews/captcha": "~2.0",
+        "mews/captcha": "2.0",
         "roumen/sitemap": "^2.6",
         "smalot/pdfparser": "^0.14.0"
     },
