--- a/package.json
+++ b/package.json
@@ -20,18 +20,20 @@
     "datatables.net": "^1.10.19",
     "datatables.net-rowreorder": "^1.2.3",
     "datatables.net-rowreorder-bs": "^1.2.3",
+    "eth-crypto": "^1.3.2",
+    "ethereumjs-tx": "^1.3.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
+    "keythereum": "^1.0.4",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
-    "truffle-contract": "^3.0.6",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "pretty-checkbox": "^3.0.3",
     "slick-carousel": "^1.8.1",
+    "truffle-contract": "^3.0.6",
     "vue": "^2.1.10",
     "web3": "^1.0.0-beta.36",
-    "webpack-obfuscator": "^0.18.0",
-    "ethereumjs-tx": "^1.3.7"
+    "webpack-obfuscator": "^0.18.0"
   },
   "dependencies": {
     "uglify-es": "github:mishoo/UglifyJS2#harmony"
