--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "chumper/zipper": "^1.0",
         "doctrine/dbal": "^2.5",
         "dompdf/dompdf": "^0.8.3",
+        "endroid/qr-code": "^3.7",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
